# AutonomousRacingCar

./: .gitignore  .gitmodules
devel/: .catkin
lab8/: README.html  README.md
lab8/costmaps/: map_preprocessor.py  process_all_maps.bash
lab8/gym/: racecar_simulator_pb2.py  racecar_simulator_pb2_grpc.py  requirements.txt  train_with_tensorforce.py
lab8/report/: README.md  report.html
lab8/ros/: build_f110_simulator.sh  build_racecar_agent.sh  build_ros.sh  check_prerequisites.sh  clean.sh  run_f110_simulator.sh  run_racecar_agent.sh  set_ros_env.sh
lab8/ros/racecar_agent/: CMakeLists.txt  package.xml  setup.py
lab8/ros/racecar_agent/launch/: racecar_agent.launch
lab8/ros/racecar_agent/models/: README.txt
lab8/ros/racecar_agent/src/: racecar_agent.py
lab8/simulator/: .gitignore  CMakeLists.txt  README.md  build_release.bash  run_server.bash
lab8/simulator/demo_client/: CMakeLists.txt  demo_client.py
lab8/simulator/docker/base/: Dockerfile  build.bash  pull.bash  push.bash  run.bash
lab8/simulator/docker/with_lookup_tables/: Dockerfile  build.bash  pull.bash  push.bash  run.bash
lab8/simulator/map_converter/: CMakeLists.txt
lab8/simulator/map_converter/src/: map_converter.cpp
lab8/simulator/simulator/: CMakeLists.txt
lab8/simulator/simulator/configuration/: racecar_simulator.json
lab8/simulator/simulator/configuration/maps/: f1_aut.obstacles.octree  f1_aut.yaml  f1_esp.obstacles.octree  f1_esp.yaml  f1_gbr.obstacles.octree  f1_gbr.yaml  f1_mco.obstacles.octree  f1_mco.yaml
lab8/simulator/simulator/include/: racecar_simulator.h
lab8/simulator/simulator/include/racecar_simulator/: map.h  simulation.h  simulation_server.h  vehicle.h
lab8/simulator/simulator/protos/: racecar_simulator.proto
lab8/simulator/simulator/src/: racecar_simulator.cpp
lab8/simulator/simulator/src/racecar_simulator/: map.cpp  simulation.cpp  simulation_server.cpp  vehicle.cpp
latex/lab5/: lab5.fdb_latexmk
reports/lab5/: lab5.aux  lab5.fls  lab5.m  lab5.tex  team3_lab5_report.tex  team_3_lab5_report.tex
reports/lab7/: A_star_table.tex  dijkstra_set.tex  (+2 more)
ros-melodic-python3/: README.txt  build_ros.sh  set_ros_env.sh
ros_packages/group3_lab6/: CMakeLists.txt  README.html  README.md  package.xml  setup.py
ros_packages/group3_lab6/cartographer_files/: README.md  f110_2d.launch  f110_2d.lua  f110_2d_viz.launch
ros_packages/group3_lab6/cfg/: drive_controller_params.cfg  pure_pursuit_params.cfg
ros_packages/group3_lab6/launch/: plotjuggler.launch  plotjuggler_layout.xml  pure_pursuit.launch  pure_pursuit_simulator.launch  pure_pursuit_simulator.yaml  simple_simulator.launch  simple_simulator.rviz  simulate_remapped_environment.yaml  simulator.launch
ros_packages/group3_lab6/maps/: adjust_remapped_levine_loop.m  adjusted_remapped_levine_loop.pgm  cartographer_levine_loop.yaml  converted_cartographer_levine_loop.pgm  original_levine_loop.yaml  remapped_levine_loop.pgm  remapped_levine_loop.yaml
ros_packages/group3_lab6/src/: drive_controller.py  dummy.cpp  pure_pursuit.py  waypoint_logger.py
ros_packages/group3_lab6/waypoint_logs/: display_waypoint_log.m  generate_simplified_path.m  lowpass_filtered_trajectory.csv  recorded_trajectory.csv  waypoint_log.csv  waypoints_lowpass_filtered.csv  waypoints_resampled.csv
ros_packages/group3_lab7/: CMakeLists.txt  README.html  README.md  package.xml  setup.py
ros_packages/group3_lab7/cfg/: drive_controller.cfg  follow_me.cfg  motion_planner.cfg  path_follower.cfg  path_publisher.cfg  pure_pursuit.cfg
ros_packages/group3_lab7/include/motion_planner/: Tree.h  bounding_box.h  occupancy_grid.h  path.h  path_follower.h  path_interpolation.h  path_optimizer.h  path_planner.h
ros_packages/group3_lab7/include/optim/constrained/: sumt.hpp
ros_packages/group3_lab7/include/optim/line_search/: more_thuente.hpp
ros_packages/group3_lab7/include/optim/unconstrained/: bfgs.hpp  cg.hpp  de.hpp  de_prmm.hpp  gd.hpp  lbfgs.hpp  newton.hpp  nm.hpp  pso.hpp  pso_dv.hpp
ros_packages/group3_lab7/include/optim/zeros/: broyden.hpp
ros_packages/group3_lab7/launch/: follow_me.launch  follow_me.rviz  follow_me_with_local_planner.launch  follow_me_with_local_planner.rviz  headless_simulator.launch  motion_planner.launch  occupancy_grids.rviz  path_following_with_local_planner.launch  path_following_with_local_planner.rviz  rviz.launch  standalone_planner.launch
ros_packages/group3_lab7/maps/: levine.yaml
ros_packages/group3_lab7/paths/: levine_resampled.csv
ros_packages/group3_lab7/src/: drive_controller.py  follow_me.py  motion_planner.cpp  path_follower.py  path_optimization_test.cpp  path_publisher.py  pure_pursuit.py
ros_packages/group3_lab7/src/motion_planner/: bounding_box.cpp  occupancy_grid.cpp  path.cpp  path_follower.cpp  path_interpolation.cpp  path_optimizer.cpp  path_planner.cpp
ros_packages/group3_lab7/test_data/: grid_path.json  map_path.json
ros_packages/pintaric_lab4/: CMakeLists.txt  README.html  README.md  package.xml  setup.py
ros_packages/pintaric_lab4/cfg/: reactive_driving_.cfg
ros_packages/pintaric_lab4/launch/: follow_the_gap.launch  simulator.launch
ros_packages/pintaric_lab4/params/: follow_the_gap.perspective  simulator.rviz
ros_packages/pintaric_lab4/src/: drive_controller.py  follow_the_gap.py
src/group3_lab6/: CMakeLists.txt  README.html
src/group3_lab6/cfg/cpp/group3_lab6/: drive_controller_paramsConfig.h  pure_pursuit_paramsConfig.h
src/group3_lab6/docs/: drive_controller_paramsConfig-usage.dox  drive_controller_paramsConfig.dox  drive_controller_paramsConfig.wikidoc  pure_pursuit_paramsConfig-usage.dox  pure_pursuit_paramsConfig.dox  pure_pursuit_paramsConfig.wikidoc
src/group3_lab6/launch/: drive_controller.yaml  plotjuggler_layout.xml  pure_pursuit.rviz  simulate_remapped_environment.launch  simulate_remapped_environment.rviz
src/group3_lab6/src/: pure_pursuit.py
src/group3_lab6/src/group3_lab6/cfg/: drive_controller_paramsConfig.py  pure_pursuit_paramsConfig.py
src/group3_lab6/waypoint_logs/: convert_raw_path.m  generate_simplified_path.m  wp-2020-05-14-07-25-57.csv
(+97 files in other folders)
