<?xml version="1.0"?>
<package format="2">
  <name>group3_lab6</name>
  <version>0.0.1</version>
  <description>Pure Pursuit</description>
  <maintainer email="thomas.pintaric@student.tuwien.ac.at">Thomas Pintaric</maintainer>
  <license>BSD</license>
  <author email="thomas.pintaric@student.tuwien.ac.at">Thomas Pintaric</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>
  <test_depend>rosunit</test_depend>
  <export></export>
</package>

